# GameDevBasics

./: .travis.yml  README.md
GameDevProjects/01HelloBuildProject/: 01hello.cpp  CMakeLists.txt
GameDevProjects/02-01StaticBuildProject/: CMakeLists.txt  CMakeLists.txt~
GameDevProjects/02-01StaticBuildProject/static_bin/: CMakeLists.txt  CMakeLists.txt~
GameDevProjects/02-01StaticBuildProject/static_bin/src/: main.cpp
GameDevProjects/02-01StaticBuildProject/static_lib/: CMakeLists.txt
GameDevProjects/02-02DynamicBuildProject/: CMakeLists.txt
GameDevProjects/02-02DynamicBuildProject/dynamic_bin/: CMakeLists.txt
GameDevProjects/02-02DynamicBuildProject/dynamic_bin/src/: main.cpp
GameDevProjects/02-02DynamicBuildProject/dynamic_lib/: CMakeLists.txt
GameDevProjects/02-02DynamicBuildProject/dynamic_lib/include/: dynamic_lib.hpp
